add deleteAppAsService() and add deleteDisk param to deleteRuntimeAsService()